新增錢包觀念 和 白皮書 免責聲明
header / footer 連結更新
正是更改名稱為 Start Pray 專案

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prayer Coin Admin Dashboard</title>
+  <title>Start Pray Admin Dashboard</title>
   <link rel="stylesheet" href="css/admin.css">
 </head>
 <body>
   <header>
     <div class="brand">
-      <span>Prayer Coin</span>
+      <span>Start Pray</span>
       <strong>Admin Wireframe</strong>
     </div>
     <div class="user-meta">
