--- a/admin/index.html
+++ b/admin/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prayer Coin Admin Entry</title>
+  <title>Start Pray Admin Entry</title>
   <link rel="stylesheet" href="css/admin.css">
   <style>
     body { background: #030712 linear-gradient(160deg, #0b1220 0%, #0f172a 45%, #111c2f 100%); }
