--- a/admin/login.html
+++ b/admin/login.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prayer Coin Admin | Secure Sign-In</title>
+  <title>Start Pray Admin | Secure Sign-In</title>
   <link rel="stylesheet" href="css/admin.css">
 </head>
 <body>
   <div class="login-wrapper">
     <div class="login-container">
       <aside class="login-hero">
-        <span class="login-badge">Prayer Coin · Admin</span>
+        <span class="login-badge">Start Pray · Admin</span>
         <h2>守護社群祈禱的後台基地</h2>
         <p>使用多層安全驗證，確認身分後即可進入 Dashboard 管理用戶、禱告與代幣。</p>
         <ul class="hero-points">
