--- a/customer-portal.html
+++ b/customer-portal.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prayer Coin | 禱告內容管理中心</title>
+  <title>Start Pray | 禱告內容管理中心</title>
   <link rel="stylesheet" href="css/wireframe.css">
 </head>
 <body>
   <header>
     <div class="navbar">
       <a class="brand" href="index.html">
-        <img class="brand-logo" src="img/logo.png" alt="Prayer Coin logo">
-        <span>Prayer Coin</span>
+        <img class="brand-logo" src="img/logo.png" alt="Start Pray logo">
+        <span>Start Pray</span>
       </a>
       <nav class="nav-links">
         <a href="index.html">首頁</a>
@@ -69,7 +69,8 @@
           <div class="fake-text-input">家庭, 醫治, 青年</div>
         </div>
       </div>
-    </section>
+    </section>
+
 
         <section class="section" id="gallery">
       <h2>圖片資產管理</h2>
@@ -134,9 +135,9 @@
     <div class="footer-inner">
       <div class="footer-top">
         <div class="footer-brand">
-          <img class="footer-logo" src="img/logo.png" alt="Prayer Coin logo">
+          <img class="footer-logo" src="img/logo.png" alt="Start Pray logo">
           <div>
-            <strong>Prayer Coin</strong>
+            <strong>Start Pray</strong>
             <p>祈禱代幣平台，連結禱告、陪伴與行動。</p>
           </div>
         </div>
@@ -171,7 +172,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+        <span>&copy; 2025 Start Pray. All rights reserved.</span>
         <div class="footer-legal">
           <a href="whitepaper.html">白皮書</a>
           <a href="disclaimer.html">免責聲明</a>
