--- a/disclaimer.html
+++ b/disclaimer.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prayer Coin | 免責聲明</title>
+  <title>Start Pray | 免責聲明</title>
   <link rel="stylesheet" href="css/wireframe.css">
 </head>
 <body>
   <header>
     <div class="navbar">
       <a class="brand" href="index.html">
-        <img class="brand-logo" src="img/logo.png" alt="Prayer Coin logo">
-        <span>Prayer Coin</span>
+        <img class="brand-logo" src="img/logo.png" alt="Start Pray logo">
+        <span>Start Pray</span>
       </a>
       <nav class="nav-links">
         <a href="index.html">首頁</a>
@@ -25,12 +25,12 @@
   <main>
     <section class="section">
       <h1>免責聲明</h1>
-      <p>為了保護 Prayer Coin 平台、用戶與合作夥伴的權益，請在使用任何服務前詳閱以下條款。本頁面僅提供資訊揭露，並不構成法律、財務或投資建議。</p>
+      <p>為了保護 Start Pray 平台、用戶與合作夥伴的權益，請在使用任何服務前詳閱以下條款。本頁面僅提供資訊揭露，並不構成法律、財務或投資建議。</p>
     </section>
 
     <section class="section">
       <h2>1. 使用範圍</h2>
-      <p>Prayer Coin 旨在提供禱告共享與代幣激勵的交流平台，用戶應了解並同意以下事項：</p>
+      <p>Start Pray 旨在提供禱告共享與代幣激勵的交流平台，用戶應了解並同意以下事項：</p>
       <ul>
         <li>平台不保證禱告內容之真實性、完整性或即時性。</li>
         <li>使用者發佈內容時須遵守相關法律與社群守則，不得侵害他人權益。</li>
@@ -40,7 +40,7 @@
 
     <section class="section">
       <h2>2. 代幣說明</h2>
-      <p> 為平台功能型代幣，僅供於 Prayer Coin 生態系統內使用與交換。以下事項請特別留意：</p>
+      <p> 為平台功能型代幣，僅供於 Start Pray 生態系統內使用與交換。以下事項請特別留意：</p>
       <ul>
         <li> 不代表股權、收益分配或任何形式之投資工具。</li>
         <li>代幣價值可能因市場或政策變動而調整，平台不對此負責。</li>
@@ -61,7 +61,7 @@
 
     <section class="section">
       <h2>4. 個資與隱私</h2>
-      <p>Prayer Coin 遵循個人資料保護法規定，並採行必要措施保護用戶隱私。請注意：</p>
+      <p>Start Pray 遵循個人資料保護法規定，並採行必要措施保護用戶隱私。請注意：</p>
       <ul>
         <li>使用者提交之禱告內容可能包含個人資訊，請自行審慎評估。</li>
         <li>平台僅在提供服務所需範圍內處理與儲存個人資料。</li>
@@ -71,7 +71,7 @@
 
     <section class="section">
       <h2>5. 責任限制</h2>
-      <p>在法律許可範圍內，Prayer Coin 對於下列情形不承擔任何責任：</p>
+      <p>在法律許可範圍內，Start Pray 對於下列情形不承擔任何責任：</p>
       <ul>
         <li>用戶因信任禱告內容而做出的決策或行為。</li>
         <li>因第三方服務中斷（區塊鏈節點、支付閘道、雲端儲存）導致之損失。</li>
@@ -88,9 +88,9 @@
     <div class="footer-inner">
       <div class="footer-top">
         <div class="footer-brand">
-          <img class="footer-logo" src="img/logo.png" alt="Prayer Coin logo">
+          <img class="footer-logo" src="img/logo.png" alt="Start Pray logo">
           <div>
-            <strong>Prayer Coin</strong>
+            <strong>Start Pray</strong>
             <p>祈禱代幣平台，連結禱告、陪伴與行動。</p>
           </div>
         </div>
@@ -125,7 +125,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+        <span>&copy; 2025 Start Pray. All rights reserved.</span>
         <div class="footer-legal">
           <a href="whitepaper.html">白皮書</a>
           <a href="disclaimer.html">免責聲明</a>
