--- a/howto.html
+++ b/howto.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prayer Coin | 使用說明</title>
+  <title>Start Pray | 使用說明</title>
   <link rel="stylesheet" href="css/wireframe.css">
 </head>
 <body>
   <header>
     <div class="navbar">
       <a class="brand" href="index.html">
-        <img class="brand-logo" src="img/logo.png" alt="Prayer Coin logo">
-        <span>Prayer Coin</span>
+        <img class="brand-logo" src="img/logo.png" alt="Start Pray logo">
+        <span>Start Pray</span>
       </a>
       <nav class="nav-links">
         <a href="index.html">首頁</a>
@@ -27,7 +27,7 @@
       <div>
         <span class="badge-soft">GUIDE</span>
         <h1>3 個步驟，啟動你的禱告任務</h1>
-        <p>Prayer Coin 讓代禱資訊有秩序地流動：建立禱告、分享給守望者、聆聽語音回應並回饋代幣。我們將流程拆成簡單的三個步驟，快速上手。</p>
+        <p>Start Pray 讓代禱資訊有秩序地流動：建立禱告、分享給守望者、聆聽語音回應並回饋代幣。我們將流程拆成簡單的三個步驟，快速上手。</p>
         <div class="checklist">
           <li>使用純文字與關鍵字描述禱告需求</li>
           <li>上傳圖片與設定分享標題，提升曝光</li>
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="hero-media">
-        <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1200&q=80" alt="使用 Prayer Coin 的示意圖">
+        <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1200&q=80" alt="使用 Start Pray 的示意圖">
       </div>
     </section>
 
@@ -110,7 +110,7 @@
 
     <section class="section">
       <h2>祈禱流程圖</h2>
-      <p>以下流程概念示意未來可插入資訊圖或影片，協助初次接觸 Prayer Coin 的使用者快速理解。</p>
+      <p>以下流程概念示意未來可插入資訊圖或影片，協助初次接觸 Start Pray 的使用者快速理解。</p>
       <div class="placeholder" aria-hidden="true" style="min-height: 240px;"></div>
     </section>
 
@@ -140,9 +140,9 @@
     <div class="footer-inner">
       <div class="footer-top">
         <div class="footer-brand">
-          <img class="footer-logo" src="img/logo.png" alt="Prayer Coin logo">
+          <img class="footer-logo" src="img/logo.png" alt="Start Pray logo">
           <div>
-            <strong>Prayer Coin</strong>
+            <strong>Start Pray</strong>
             <p>祈禱代幣平台，連結禱告、陪伴與行動。</p>
           </div>
         </div>
@@ -177,7 +177,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+        <span>&copy; 2025 Start Pray. All rights reserved.</span>
         <div class="footer-legal">
           <a href="whitepaper.html">白皮書</a>
           <a href="disclaimer.html">免責聲明</a>
