--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prayer Coin | 禱告 x 代幣的聚合平台</title>
+  <title>Start Pray | 禱告 x 代幣的聚合平台</title>
   <link rel="stylesheet" href="css/wireframe.css">
 </head>
 <body>
   <header>
     <div class="navbar">
       <a class="brand" href="index.html">
-        <img class="brand-logo" src="img/logo.png" alt="Prayer Coin logo">
-        <span>Prayer Coin</span>
+        <img class="brand-logo" src="img/logo.png" alt="Start Pray logo">
+        <span>Start Pray</span>
       </a>
       <nav class="nav-links">
         <a href="index.html" class="active">首頁</a>
@@ -27,7 +27,7 @@
       <div>
         <span class="badge-soft">PRAYER + TOKEN</span>
         <h1>讓禱告看見彼此，也讓代幣驅動陪伴的力量</h1>
-        <p>Prayer Coin 集結願意彼此守望的夥伴，透過代幣激勵禱告回應、語音祝福與行動關懷。登入後即可建立禱告牆、追蹤曝光成效並邀請朋友代禱。</p>
+        <p>Start Pray 集結願意彼此守望的夥伴，透過代幣激勵禱告回應、語音祝福與行動關懷。登入後即可建立禱告牆、追蹤曝光成效並邀請朋友代禱。</p>
         <div class="hero-actions">
           <a class="btn btn-primary" href="login.html">登入帳戶</a>
           <a class="btn btn-outline" href="howto.html">了解代禱流程</a>
@@ -204,9 +204,9 @@
     <div class="footer-inner">
       <div class="footer-top">
         <div class="footer-brand">
-          <img class="footer-logo" src="img/logo.png" alt="Prayer Coin logo">
+          <img class="footer-logo" src="img/logo.png" alt="Start Pray logo">
           <div>
-            <strong>Prayer Coin</strong>
+            <strong>Start Pray</strong>
             <p>祈禱代幣平台，連結禱告、陪伴與行動。</p>
           </div>
         </div>
@@ -241,7 +241,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+        <span>&copy; 2025 Start Pray. All rights reserved.</span>
         <div class="footer-legal">
           <a href="whitepaper.html">白皮書</a>
           <a href="disclaimer.html">免責聲明</a>
