--- a/public/legacy/about.html
+++ b/public/legacy/about.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prayer Coin | 關於我們</title>
+  <title>Start Pray | 關於我們</title>
   <link rel="stylesheet" href="css/wireframe.css">
 </head>
 <body>
   <header>
     <div class="navbar">
       <a class="brand" href="index">
-        <img class="brand-logo" src="img/logo.png" alt="Prayer Coin logo">
-        <span>Prayer Coin</span>
+        <img class="brand-logo" src="img/logo.png" alt="Start Pray logo">
+        <span>Start Pray</span>
       </a>
       <nav class="nav-links">
         <a href="index">首頁</a>
@@ -27,7 +27,7 @@
       <div>
         <span class="badge-soft">OUR STORY</span>
         <h1>把禱告變成可被看見、被回應的行動</h1>
-        <p>Prayer Coin 由一群熱衷禱告與科技的夥伴所組成，期待運用區塊鏈的透明與信任特性，凝聚世界各地的守望者。我們相信每一個禱告都值得被紀錄、被回應，也值得在社群中看見真實的陪伴。</p>
+        <p>Start Pray 由一群熱衷禱告與科技的夥伴所組成，期待運用區塊鏈的透明與信任特性，凝聚世界各地的守望者。我們相信每一個禱告都值得被紀錄、被回應，也值得在社群中看見真實的陪伴。</p>
         <div class="checklist">
           <li>建立安全的禱告發佈與回應流程，避免信息被遺忘</li>
           <li>透過  代幣鼓勵持續的陪伴與語音禱告</li>
@@ -41,7 +41,7 @@
 
     <section class="section">
       <h2>我們的核心價值</h2>
-      <p>從禱告到行動，我們以四個關鍵價值推動 Prayer Coin 的產品發展與社群文化。</p>
+      <p>從禱告到行動，我們以四個關鍵價值推動 Start Pray 的產品發展與社群文化。</p>
       <div class="layout-grid columns-2" style="margin-top: 1.5rem;">
         <div class="gradient-card">
           <strong>真實陪伴</strong>
@@ -67,7 +67,7 @@
         <div>
           <span class="badge-soft">MISSION</span>
           <h2>從本地小組到全球祈禱網絡</h2>
-          <p>Prayer Coin 的雛形來自於一個線上小組。疫情期間，我們經歷了遠距禱告的限制，因而開始思考：如何讓禱告不因距離而消失？如何記錄每一次回應的恩典？</p>
+          <p>Start Pray 的雛形來自於一個線上小組。疫情期間，我們經歷了遠距禱告的限制，因而開始思考：如何讓禱告不因距離而消失？如何記錄每一次回應的恩典？</p>
           <p>透過數位工具與代幣激勵，我們看見跨文化、跨城市的守望者相互扶持，也看見禱告所帶來的真實改變。</p>
           <ul class="checklist">
             <li>Beta 測試涵蓋 12 個國家、60+ 禱告小組</li>
@@ -119,7 +119,7 @@
 
     <section class="section">
       <h2>團隊焦點</h2>
-      <p>Prayer Coin 由產品設計、牧養輔導、資料工程與區塊鏈專家組成。我們也持續招募對禱告有負擔、擅長行動設計與資料分析的夥伴加入。</p>
+      <p>Start Pray 由產品設計、牧養輔導、資料工程與區塊鏈專家組成。我們也持續招募對禱告有負擔、擅長行動設計與資料分析的夥伴加入。</p>
       <div class="layout-grid columns-3" style="margin-top: 1.5rem;">
         <div class="gradient-card">
           <strong>Product &amp; UX</strong>
@@ -140,9 +140,9 @@
     <div class="footer-inner">
       <div class="footer-top">
         <div class="footer-brand">
-          <img class="footer-logo" src="img/logo.png" alt="Prayer Coin logo">
+          <img class="footer-logo" src="img/logo.png" alt="Start Pray logo">
           <div>
-            <strong>Prayer Coin</strong>
+            <strong>Start Pray</strong>
             <p>祈禱代幣平台，連結禱告、陪伴與行動。</p>
           </div>
         </div>
@@ -177,7 +177,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+        <span>&copy; 2025 Start Pray. All rights reserved.</span>
         <div class="footer-legal">
           <a href="whitepaper">白皮書</a>
           <a href="disclaimer">免責聲明</a>
