--- a/whitepaper.html
+++ b/whitepaper.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prayer Coin | 平台白皮書</title>
+  <title>Start Pray | 平台白皮書</title>
   <link rel="stylesheet" href="css/wireframe.css">
 </head>
 <body>
   <header>
     <div class="navbar">
       <a class="brand" href="index.html">
-        <img class="brand-logo" src="img/logo.png" alt="Prayer Coin logo">
-        <span>Prayer Coin</span>
+        <img class="brand-logo" src="img/logo.png" alt="Start Pray logo">
+        <span>Start Pray</span>
       </a>
       <nav class="nav-links">
         <a href="index.html">首頁</a>
@@ -25,8 +25,8 @@
   <main>
     <section class="section hero">
       <div class="hero-content">
-        <h1>Prayer Coin 白皮書摘要</h1>
-        <p>本白皮書概述 Prayer Coin 的使命、代幣經濟模型與技術架構，說明如何以禱告互助為核心，建立透明、安全且可持續的信仰社群生態。</p>
+        <h1>Start Pray 白皮書摘要</h1>
+        <p>本白皮書概述 Start Pray 的使命、代幣經濟模型與技術架構，說明如何以禱告互助為核心，建立透明、安全且可持續的信仰社群生態。</p>
         <div class="hero-actions">
           <a class="btn btn-primary" href="#token-design">了解代幣設計</a>
           <a class="btn btn-outline" href="#roadmap">查看 Roadmap</a>
@@ -50,7 +50,7 @@
 
     <section class="section" id="mission">
       <h2>平台定位與使命</h2>
-      <p>Prayer Coin 旨在連結禱告、行動與資源，讓代禱者與發起者皆能在信仰社群中獲得真實陪伴。透過代幣激勵設計，我們希望鼓勵更多人投入禱告與關懷，同時確保過程透明且可追溯。</p>
+      <p>Start Pray 旨在連結禱告、行動與資源，讓代禱者與發起者皆能在信仰社群中獲得真實陪伴。透過代幣激勵設計，我們希望鼓勵更多人投入禱告與關懷，同時確保過程透明且可追溯。</p>
       <div class="layout-grid columns-2" style="margin-top: 1.5rem;">
         <div class="card-wireframe">禱告者：分享需要、設定曝光、追蹤回應與代幣流向。</div>
         <div class="card-wireframe">守望者：文字或語音回應，完成任務即可獲得  激勵。</div>
@@ -131,7 +131,7 @@
 
     <section class="section" id="roadmap">
       <h2>Roadmap</h2>
-      <p>Prayer Coin 將分階段推出功能，並持續與教會、非營利組織及社群開發者合作。</p>
+      <p>Start Pray 將分階段推出功能，並持續與教會、非營利組織及社群開發者合作。</p>
       <div class="layout-grid columns-2" style="margin-top: 1.5rem;">
         <div class="card-wireframe">
           <strong>2025 Q2 · Beta</strong>
@@ -183,9 +183,9 @@
     <div class="footer-inner">
       <div class="footer-top">
         <div class="footer-brand">
-          <img class="footer-logo" src="img/logo.png" alt="Prayer Coin logo">
+          <img class="footer-logo" src="img/logo.png" alt="Start Pray logo">
           <div>
-            <strong>Prayer Coin</strong>
+            <strong>Start Pray</strong>
             <p>祈禱代幣平台，連結禱告、陪伴與行動。</p>
           </div>
         </div>
@@ -220,7 +220,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+        <span>&copy; 2025 Start Pray. All rights reserved.</span>
         <div class="footer-legal">
           <a href="whitepaper.html">白皮書</a>
           <a href="disclaimer.html">免責聲明</a>
