--- a/public/legacy/404.html
+++ b/public/legacy/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prayer Coin | 找不到頁面 (404)</title>
+  <title>Start Pray | 找不到頁面 (404)</title>
   <link rel="stylesheet" href="css/wireframe.css">
   <style>
     body {
@@ -49,8 +49,8 @@
   <header>
     <div class="navbar">
       <a class="brand" href="index">
-        <img class="brand-logo" src="img/logo.png" alt="Prayer Coin logo">
-        <span>Prayer Coin</span>
+        <img class="brand-logo" src="img/logo.png" alt="Start Pray logo">
+        <span>Start Pray</span>
       </a>
       <nav class="nav-links">
         <a href="index">首頁</a>
@@ -78,9 +78,9 @@
     <div class="footer-inner">
       <div class="footer-top">
         <div class="footer-brand">
-          <img class="footer-logo" src="img/logo.png" alt="Prayer Coin logo">
+          <img class="footer-logo" src="img/logo.png" alt="Start Pray logo">
           <div>
-            <strong>Prayer Coin</strong>
+            <strong>Start Pray</strong>
             <p>祈禱代幣平台，連結禱告、陪伴與行動。</p>
           </div>
         </div>
@@ -115,7 +115,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+        <span>&copy; 2025 Start Pray. All rights reserved.</span>
         <div class="footer-legal">
           <a href="whitepaper">白皮書</a>
           <a href="disclaimer">免責聲明</a>
