--- a/public/legacy/login.html
+++ b/public/legacy/login.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prayer Coin | 登入</title>
+  <title>Start Pray | 登入</title>
   <link rel="stylesheet" href="css/wireframe.css">
 </head>
 <body>
   <header>
     <div class="navbar">
       <a class="brand" href="index">
-        <img class="brand-logo" src="img/logo.png" alt="Prayer Coin logo">
-        <span>Prayer Coin</span>
+        <img class="brand-logo" src="img/logo.png" alt="Start Pray logo">
+        <span>Start Pray</span>
       </a>
       <nav class="nav-links">
         <a href="index">首頁</a>
@@ -54,7 +54,7 @@
             <button type="submit" class="btn btn-primary" style="width: 100%; justify-content: center;">登入帳戶</button>
           </form>
           <div class="auth-footer">
-            <span>還沒有帳號？前往 <a href="signup">註冊 Prayer Coin</a>。</span>
+            <span>還沒有帳號？前往 <a href="signup">註冊 Start Pray</a>。</span>
             <span>已登入？<a href="customer-portal">前往禱告管理中心</a>。</span>
           </div>
         </section>
@@ -83,9 +83,9 @@
     <div class="footer-inner">
       <div class="footer-top">
         <div class="footer-brand">
-          <img class="footer-logo" src="img/logo.png" alt="Prayer Coin logo">
+          <img class="footer-logo" src="img/logo.png" alt="Start Pray logo">
           <div>
-            <strong>Prayer Coin</strong>
+            <strong>Start Pray</strong>
             <p>祈禱代幣平台，連結禱告、陪伴與行動。</p>
           </div>
         </div>
@@ -120,7 +120,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+        <span>&copy; 2025 Start Pray. All rights reserved.</span>
         <div class="footer-legal">
           <a href="whitepaper">白皮書</a>
           <a href="disclaimer">免責聲明</a>
