--- a/signup.html
+++ b/signup.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prayer Coin | 註冊帳戶</title>
+  <title>Start Pray | 註冊帳戶</title>
   <link rel="stylesheet" href="css/wireframe.css">
 </head>
 <body>
   <header>
     <div class="navbar">
       <a class="brand" href="index.html">
-        <img class="brand-logo" src="img/logo.png" alt="Prayer Coin logo">
-        <span>Prayer Coin</span>
+        <img class="brand-logo" src="img/logo.png" alt="Start Pray logo">
+        <span>Start Pray</span>
       </a>
       <nav class="nav-links">
         <a href="index.html">首頁</a>
@@ -70,7 +70,7 @@
           </div>
         </section>        <section class="auth-card">
           <div>
-            <h1>建立 Prayer Coin 帳戶</h1>
+            <h1>建立 Start Pray 帳戶</h1>
             <p>完成基本資料與 KYC 項目，進一步體驗禱告分享、語音回應與代幣激勵。</p>
           </div>
           <div class="social-buttons">
@@ -267,9 +267,9 @@
     <div class="footer-inner">
       <div class="footer-top">
         <div class="footer-brand">
-          <img class="footer-logo" src="img/logo.png" alt="Prayer Coin logo">
+          <img class="footer-logo" src="img/logo.png" alt="Start Pray logo">
           <div>
-            <strong>Prayer Coin</strong>
+            <strong>Start Pray</strong>
             <p>祈禱代幣平台，連結禱告、陪伴與行動。</p>
           </div>
         </div>
@@ -304,7 +304,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+        <span>&copy; 2025 Start Pray. All rights reserved.</span>
         <div class="footer-legal">
           <a href="whitepaper.html">白皮書</a>
           <a href="disclaimer.html">免責聲明</a>
